@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_download.html,v 1.29 2009-01-09 23:39:54 guru Exp $      -->
+<!--    $Id: gmt_download.html,v 1.30 2009-01-16 21:43:11 guru Exp $      -->
 <HEAD>
 <TITLE>GMT - The Generic Mapping Tools</TITLE>
 </HEAD>
@@ -32,7 +32,7 @@ parameter file.  The automated install will also install netCDF if needed.
 If you prefer, you can also do the typical manual install by ftp'ing the files, untar,
 run configure, make etc.  Read the README file for the required steps.
 For manual install you must also manually get and install the <A HREF="ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf.tar.gz">Unidata
-netCDF library</A> which GMT requires.
+netCDF library</A> which GMT requires, or have the library already installed.  Use ftp to any of the GMT <A HREF="gmt_mirrors.html">mirror sites</A>.
 <LI><I>CVS installation for GMT gurus</I>.
 To get the bleeding edge GMT version and even contribute to the development of
 GMT, consider installing the "live" GMT version by following the <A HREF="gmt_cvs.html">CVS Instructions</A>.
